--- a/main.html
+++ b/main.html
@@ -7,8 +7,68 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
+    <table style="width: 100%; height: 100%" border="1">
+       <tr>
+		   <td>
+			   <!--Nested Table 2 -->
+			   <table border="1" style="width: 100%;">
+				   <tr>
+					   <th colspan="2">Nested Table 2</th>
+				   </tr>
+				   <tr>
+					   <th>Column 1</th>
+					   <th>Column 2</th>
+				   </tr>
+				   <tr>
+					   <td align="center">abc</td>
+					   <td align="center">def</td>
+				   </tr>
+			   </table>
+		   </td>
+		   
+		   <td>
+			   <table border="1" style="width: 100%;">
+				   <tr>
+					   <th>Nested Table 1</th>
+				   </tr>
+				   <tr>
+					   <td>
+					     <ul>
+						    <li>List item</li>
+						    <li>List item</li>
+						    <li>List item</li>
+					     </ul>
+					   </td>   
+				   </tr>
+			   </table>
+		   </td>
+	   </tr>
+		<tr>
+			<td>
+				<!--Nested Table 3 -->
+				<table border="1" style="width: 100%;">
+					<tr>
+				      <th colspan="2">Nested Table 3</th>
+					</tr>
+					<tr>
+						<td align="center"><a href="#">Nested Table</a></td>
+						<td align="center">Demo Continued</td>
+					</tr>
+				</table>	
+			</td>
+			
+			<td>
+				<!-- Nested Table 4 -->
+				<table border="1" style="width: 100%;">
+					<tr>
+					  <th>Nested Table 4</th>
+					</tr>
+					<tr>
+						<td align="center" style="background-color: black; color:white">HTML</td>
+					</tr>
+				</table>
+			</td>
+		</tr>
     </table>
   </body>
 </html>
